# msctrl

./: CMakeLists.txt  LICENSE  README.md
configurations/: afterburner.json
doc/: transistor.dia
src/: AxisMap.cpp  AxisMap.h  ButtonMap.cpp  ButtonMap.h  CLParser.cpp  CLParser.h  Configure.h.in  Controller.cpp  Controller.h  GyroMap.cpp  GyroMap.h  HatMap.cpp  HatMap.h  IMUIntegrator.cpp  IMUIntegrator.h  MasterSystem.cpp  MasterSystem.h  SDLMain.cpp  SDLMain.h  msctrl.cpp  utils.cpp  utils.h
